--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
   </head>
   <body>
+    <header class="header">
+      <img
+        src="{{ site.baseurl }}/assets/img/river-logo.png"
+        alt="Logo"
+        class="__logo"
+      />
+      <div class="__links">
+        <a href="javascript:void" title="Products" class="__link">Products</a>
+        <a href="javascript:void" title="Developers" class="__link"
+          >Developers</a
+        >
+        <a href="javascript:void" title="Social" class="__link">Social</a>
+        <a href="javascript:void" title="About" class="__link">About</a>
+      </div>
+      <a href="javascript:void" title="Sign Up" class="__sign-up">Sign Up</a>
+    </header>
     {{ content }}
   </body>
 </html>
