--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,31 +32,39 @@ body {
     padding: 20px;
   }
 }
-.scroll-container {
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
 
-section {
-  height: 100vh;
-  scroll-snap-align: center;
-}
-
-.scroll-container {
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
-
-section {
-  height: 100vh;
-  scroll-snap-align: center;
-}
-
-section {
-  padding: 1rem;
+.section {
   display: flex;
+  height: 100vh;
+  width: 100vw;
+  scroll-snap-align: center;
+  flex-flow: column nowrap;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  padding: 1rem;
+
+  .__body {
+    margin: auto;
+  }
+
+  .__breadcrumb {
+    display: flex;
+    flex-flow: row nowrap;
+
+    .__teaser {
+      width: 100px;
+    }
+  }
+}
+
+.scroll-container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.scroll-container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
