WIP, red "Sign Up" button.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,6 @@
     <a href="javascript:void" title="About" class="__link">About</a>
   </div>
   <div class="__sign-up">
-    <a href="javascript:void" title="Sign Up">Sign Up</a>
+    <a href="javascript:void" title="Sign Up" class="__link">Sign Up</a>
   </div>
 </header>
