--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,5 @@
 @import "fonts";
+@import "colors";
 
 * {
   box-sizing: border-box;
@@ -7,6 +8,23 @@
 body {
   margin: 0;
   font-family: "Helvetica", sans-serif;
+  color: var(--gray-dark);
+}
+
+.p1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 31px;
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+
+.p2 {
+  font-family: "Shippori Mincho", serif;
+  font-size: 104px;
+  margin-top: 28px;
+  margin-bottom: 28px;
+  line-height: 1.2em;
+  letter-spacing: -2px;
 }
 
 .header {
@@ -30,6 +48,7 @@ body {
 
   .__links {
     display: flex;
+    flex-basis: 40%;
     justify-content: space-between;
 
     .__link {
@@ -86,14 +105,37 @@ body {
 
   .__body {
     margin: auto;
+    min-width: 55vw;
+    max-width: 90vw;
   }
 
   .__breadcrumb {
+    color: var(--gray-dark);
+    height: 10vh;
     display: flex;
     flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 30vw;
+
+    &,
+    &:active,
+    &:hover,
+    &:visited {
+      color: var(--gray-dark);
+      text-decoration: none;
+    }
+
+    .__img {
+      height: 7vh;
+      margin-right: 15px;
+    }
 
     .__teaser {
-      width: 100px;
+      font-family: "Baskerville", serif;
+      font-size: 32px;
+      color: var(--gray-dark);
+      text-decoration: none;
     }
   }
 }
