--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,9 +11,31 @@ body {
   color: var(--gray-dark);
 }
 
+.p1,
+.p2,
+.p3,
+.p4 {
+  &.--green {
+    color: var(--green);
+  }
+
+  &.--orange {
+    color: var(--orange);
+  }
+
+  &.--yellow {
+    color: var(--yellow);
+  }
+
+  &.--magenta {
+    color: var(--magenta);
+  }
+}
+
 .p1 {
   font-family: "Montserrat", sans-serif;
   font-size: 31px;
+  line-height: 1.5em;
   margin-top: 28px;
   margin-bottom: 28px;
 }
@@ -25,6 +47,19 @@ body {
   margin-bottom: 28px;
   line-height: 1.2em;
   letter-spacing: -2px;
+}
+
+.p3 {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 31px;
+}
+
+.p4 {
+  font-family: "Baskerville", serif;
+  font-style: italic;
+  font-size: 31px;
 }
 
 .header {
@@ -93,6 +128,12 @@ body {
   }
 }
 
+.scroll-container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
 .section {
   display: flex;
   height: 100vh;
@@ -105,7 +146,6 @@ body {
 
   .__body {
     margin: auto;
-    min-width: 55vw;
     max-width: 90vw;
   }
 
@@ -138,16 +178,12 @@ body {
       text-decoration: none;
     }
   }
-}
 
-.scroll-container {
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
+  &.--home-intro {
+  }
 
-.scroll-container {
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
+  &.--home-privacy-platform {
+    .__body {
+    }
+  }
 }
