--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,24 @@
     ></script>
   </head>
   <body>
-    {% include header.html %} {{ content }}
+    <div class="video-container">
+      <video
+        playsinline
+        autoplay
+        muted
+        loop
+        id="background-video"
+        class="__video"
+      >
+        <source
+          src="{{ site.baseurl }}/assets/video/water.mp4"
+          type="video/mp4"
+        />
+      </video>
+      <div class="__overlay"></div>
+    </div>
+
+    {% include header.html %}
+    <main class="main">{{ content }}</main>
   </body>
 </html>
