Add roughly-styled second page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,12 @@
     <img src="{{ site.baseurl }}/assets/img/river-logo.png" alt="Logo" />
   </div>
   <div class="__links">
-    <a href="javascript:void" title="Products" class="__link">Products</a>
-    <a href="javascript:void" title="Developers" class="__link">Developers</a>
-    <a href="javascript:void" title="Social" class="__link">Social</a>
-    <a href="javascript:void" title="About" class="__link">About</a>
+    <a href="javascript:void" title="Products" class="__link l1">Products</a>
+    <a href="javascript:void" title="Developers" class="__link l1"
+      >Developers</a
+    >
+    <a href="javascript:void" title="Social" class="__link l1">Social</a>
+    <a href="javascript:void" title="About" class="__link l1">About</a>
   </div>
   <div class="__sign-up">
     <a href="javascript:void" title="Sign Up" class="__link">Sign Up</a>
