--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,24 +10,7 @@
     ></script>
   </head>
   <body>
-    <div class="video-container">
-      <video
-        playsinline
-        autoplay
-        muted
-        loop
-        id="background-video"
-        class="__video"
-      >
-        <source
-          src="{{ site.baseurl }}/assets/video/water.mp4"
-          type="video/mp4"
-        />
-      </video>
-      <div class="__overlay"></div>
-    </div>
-
-    {% include header.html %}
+    {% include video.html %} {% include header.html %}
     <main class="main">{{ content }}</main>
   </body>
 </html>
