--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -87,6 +87,33 @@ body {
   }
 }
 
+.col2,
+.col3 {
+  column-gap: 2em;
+  column-width: 50%;
+
+  > *:first-child {
+    margin-top: 0;
+  }
+
+  .__card {
+    break-inside: avoid;
+    page-break-inside: avoid;
+
+    > *:first-child {
+      margin-top: 0;
+    }
+  }
+}
+
+.col2 {
+  column-count: 2;
+}
+
+.col3 {
+  column-count: 3;
+}
+
 .header {
   position: relative;
   width: 100vw;
@@ -254,10 +281,15 @@ body {
   padding: 12px 27px 8px 27px;
   border-radius: 20px;
 
-  &.--red-outline {
+  &.--red-stroke {
     border: 2px solid var(--orange);
     color: var(--gray-dark);
     background-color: white;
+  }
+
+  &.--yellow-fill {
+    background-color: var(--yellow);
+    color: var(--gray-dark);
   }
 }
 
