--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,9 @@
     <img src="{{ site.baseurl }}/assets/img/river-logo.png" alt="Logo" />
   </div>
   <div class="__links">
+    <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
     <a href="javascript:void" title="Products" class="__link l1">Products</a>
-    <a href="javascript:void" title="Developers" class="__link l1"
-      >Developers</a
-    >
-    <a href="javascript:void" title="Social" class="__link l1">Social</a>
+    <a href="javascript:void" title="Services" class="__link l1">Services</a>
     <a href="javascript:void" title="About" class="__link l1">About</a>
   </div>
   <div class="__sign-up">
