Add breakpoint debugger

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,5 @@
 @import "normalize";
+@import "breakpoints";
 @import "fonts";
 @import "colors";
 
@@ -298,6 +299,52 @@ body {
 
   &.--black {
     background-image: url("../img/play-button-black.png");
+  }
+}
+
+.bp-debugger {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  border: 1px solid var(--gray-dark);
+  display: flex;
+  flex-flow: row nowrap;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 12px;
+  padding: 0;
+  margin: 0;
+
+  .__bp {
+    margin: 0;
+    padding: 4px;
+    border-right: 1px solid var(--gray-dark);
+    text-align: center;
+
+    &::before {
+      @include bp-mobile {
+        content: "📱";
+      }
+
+      @include bp-small {
+        content: "S";
+      }
+
+      @include bp-medium {
+        content: "M";
+      }
+
+      @include bp-large {
+        content: "L";
+      }
+    }
+  }
+
+  .__w {
+    margin: 0;
+    padding: 4px;
+    text-align: center;
   }
 }
 
