--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -40,21 +40,37 @@ body {
 
 .p1 {
   font-family: "Montserrat", sans-serif;
-  font-size: 31px;
+  font-size: 28px;
   line-height: 1.5em;
   margin-top: 28px;
   margin-bottom: 28px;
   color: var(--body-color);
+
+  @include bp-small {
+    font-size: 18px;
+  }
+
+  @include bp-medium {
+    font-size: 24px;
+  }
 }
 
 .p2 {
-  font-family: "Shippori Mincho", serif;
-  font-size: 104px;
+  font-family: "Shippori Mincho Bold", serif;
+  font-size: 100px;
   margin-top: 28px;
   margin-bottom: 28px;
-  line-height: 1.2em;
-  letter-spacing: -2px;
+  line-height: 1.1em;
+  letter-spacing: 0.01em;
   color: var(--body-color);
+
+  @include bp-small {
+    font-size: 64px;
+  }
+
+  @include bp-medium {
+    font-size: 87px;
+  }
 }
 
 .p3 {
@@ -63,6 +79,14 @@ body {
   font-weight: bold;
   font-size: 31px;
   color: var(--body-color);
+
+  @include bp-small {
+    font-size: 18px;
+  }
+
+  @include bp-medium {
+    font-size: 24px;
+  }
 }
 
 .p4 {
@@ -70,6 +94,14 @@ body {
   font-style: italic;
   font-size: 31px;
   color: var(--body-color);
+
+  @include bp-small {
+    font-size: 18px;
+  }
+
+  @include bp-medium {
+    font-size: 24px;
+  }
 }
 
 .l1 {
@@ -354,7 +386,7 @@ body {
 
 .section.--home-intro {
   .__body {
-    max-width: 80em;
+    // min-width: 64em;
   }
 }
 
