Comprehensive responsive styling

--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -4,5 +4,5 @@
   title="Next"
   class="__breadcrumb"
 >
-  <p class="__teaser">{{ include.teaser }}</p>
+  <p class="__teaser l2">{{ include.teaser }}</p>
 </a>
