--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,8 @@
     <a href="javascript:void" title="About" class="__link l1">About</a>
   </div>
   <div class="__sign-up">
-    <a href="javascript:void" title="Sign Up" class="__link">Sign Up</a>
+    <a href="javascript:void" title="Sign Up" class="__link button --sign-up"
+      >Sign Up</a
+    >
   </div>
 </header>
