--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -20,25 +20,25 @@
 
 @font-face {
   font-family: "Shippori Mincho Medium";
-  src: url(../fonts/ShipporiMincho-Medium.otf);
+  src: url(../fonts/ShipporiMincho-Medium.ttf);
 }
 
 @font-face {
   font-family: "Shippori Mincho Regular";
-  src: url(../fonts/ShipporiMincho-Regular.otf);
+  src: url(../fonts/ShipporiMincho-Regular.ttf);
 }
 
 @font-face {
   font-family: "Shippori Mincho Semi Bold";
-  src: url(../fonts/ShipporiMincho-SemiBold.otf);
+  src: url(../fonts/ShipporiMincho-SemiBold.ttf);
 }
 
 @font-face {
   font-family: "Shippori Mincho Bold";
-  src: url(../fonts/ShipporiMincho-Bold.otf);
+  src: url(../fonts/ShipporiMincho-Bold.ttf);
 }
 
 @font-face {
   font-family: "Shippori Mincho Extra Bold";
-  src: url(../fonts/ShipporiMincho-ExtraBold.otf);
+  src: url(../fonts/ShipporiMincho-ExtraBold.ttf);
 }
