--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@
 @import "breakpoints";
 @import "fonts";
 @import "colors";
+@import "typography";
 
 * {
   box-sizing: border-box;
@@ -9,133 +10,12 @@
 
 html {
   --body-color: var(--gray-dark);
+  --signup-link-pill-color: #b8302e;
   transition: background-color ease-in 0.3s;
 }
 
 body {
   margin: 0;
-  font-family: "Helvetica", sans-serif;
-}
-
-.p1,
-.p2,
-.p3,
-.p4 {
-  &.--green {
-    color: var(--green);
-  }
-
-  &.--orange {
-    color: var(--orange);
-  }
-
-  &.--yellow {
-    color: var(--yellow);
-  }
-
-  &.--magenta {
-    color: var(--magenta);
-  }
-}
-
-.p1 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 28px;
-  line-height: 1.5em;
-  margin-top: 28px;
-  margin-bottom: 28px;
-  color: var(--body-color);
-
-  @include bp-mobile {
-    font-size: 18px;
-  }
-
-  @include bp-small {
-    font-size: 18px;
-  }
-
-  @include bp-medium {
-    font-size: 24px;
-  }
-}
-
-.p2 {
-  font-family: "Shippori Mincho Bold", serif;
-  font-size: 100px;
-  margin-top: 28px;
-  margin-bottom: 28px;
-  line-height: 1.1em;
-  letter-spacing: 0.01em;
-  color: var(--body-color);
-
-  @include bp-mobile {
-    font-size: 54px;
-  }
-
-  @include bp-small {
-    font-size: 64px;
-  }
-
-  @include bp-medium {
-    font-size: 87px;
-  }
-}
-
-.p3 {
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 31px;
-  color: var(--body-color);
-
-  @include bp-mobile {
-    font-size: 18px;
-  }
-
-  @include bp-small {
-    font-size: 18px;
-  }
-
-  @include bp-medium {
-    font-size: 24px;
-  }
-}
-
-.p4 {
-  font-family: "Baskerville", serif;
-  font-style: italic;
-  font-size: 31px;
-  color: var(--body-color);
-
-  @include bp-mobile {
-    font-size: 18px;
-  }
-
-  @include bp-small {
-    font-size: 18px;
-  }
-
-  @include bp-medium {
-    font-size: 24px;
-  }
-}
-
-.l1 {
-  font-family: "Baskerville", serif;
-  font-style: italic;
-  font-size: 30px;
-  text-decoration: none;
-
-  &,
-  &:hover,
-  &:active,
-  &:visited {
-    color: var(--body-color);
-  }
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 .col2,
@@ -202,18 +82,6 @@ body {
 
     .__link {
       flex-shrink: 0;
-      color: white;
-      font-family: "Baskerville", serif;
-      font-size: 20px;
-      line-height: 22px;
-      text-transform: uppercase;
-      text-decoration: none;
-      letter-spacing: 4px;
-
-      --signup-link-pill-color: #b8302e;
-      background-color: var(--signup-link-pill-color);
-      padding: 12px 27px 8px 27px;
-      border-radius: 20px;
     }
   }
 }
@@ -265,10 +133,27 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1em;
 
   .__body {
     margin: auto;
+
+    &.--with-video-button {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+
+    .__video-button {
+      flex-shrink: 0;
+      margin-top: 0;
+      margin-right: 2.5vw;
+
+      & + div > *:first-child {
+        margin-top: 0;
+      }
+    }
   }
 
   .__breadcrumb {
@@ -279,14 +164,7 @@ body {
     align-items: center;
     height: 10vh;
     max-width: 30vw;
-
-    &,
-    &:active,
-    &:hover,
-    &:visited {
-      color: var(--gray-dark);
-      text-decoration: none;
-    }
+    text-decoration: none;
 
     padding-left: 100px;
     background-image: url("../img/down-arrow.png");
@@ -295,54 +173,7 @@ body {
     background-position: center left;
 
     .__teaser {
-      font-family: "Baskerville", serif;
-      font-size: 32px;
-      color: var(--body-color);
-      text-decoration: none;
-
-      @include bp-mobile {
-        font-size: 24px;
-      }
-
-      @include bp-small {
-        font-size: 24px;
-      }
-
-      @include bp-medium {
-        font-size: 24px;
-      }
     }
-  }
-}
-
-.button-container {
-  margin: 20px;
-  text-align: center;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
-}
-
-.button {
-  font-family: "Montserrat", serif;
-  font-size: 20px;
-  line-height: 22px;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: 4px;
-  padding: 12px 27px 8px 27px;
-  border-radius: 20px;
-
-  &.--red-stroke {
-    border: 2px solid var(--orange);
-    color: var(--gray-dark);
-    background-color: white;
-  }
-
-  &.--yellow-fill {
-    background-color: var(--yellow);
-    color: var(--gray-dark);
   }
 }
 
@@ -360,6 +191,21 @@ body {
   &.--black {
     background-image: url("../img/play-button-black.png");
   }
+
+  @include bp-mobile {
+    width: 10vw;
+    height: 10vw;
+  }
+
+  @include bp-small {
+    width: 10vw;
+    height: 10vw;
+  }
+
+  @include bp-medium {
+    width: 10vw;
+    height: 10vw;
+  }
 }
 
 .bp-debugger {
@@ -375,6 +221,7 @@ body {
   line-height: 12px;
   padding: 0;
   margin: 0;
+  color: var(--body-color);
 
   .__bp {
     margin: 0;
@@ -409,7 +256,7 @@ body {
 }
 
 /******************************************************************************
-  Home Intro
+  Slides 1-3: Home Intro
 *******************************************************************************/
 
 .section.--home-intro {
@@ -419,7 +266,7 @@ body {
 }
 
 /******************************************************************************
-  A Privacy Platform You'll Want To Use
+  Slide 4: A Privacy Platform You'll Want To Use
 *******************************************************************************/
 
 html[data-section="home-privacy-platform"] {
@@ -437,12 +284,12 @@ html[data-section="home-privacy-platform"] {
 
 section.--home-privacy-platform {
   .__body {
-    max-width: 60em;
+    max-width: 48em;
   }
 }
 
 /******************************************************************************
-  Video 1
+  Slides 5-6: Video 1
 ******************************************************************************/
 
 html[data-section="home-video-1"] {
@@ -466,25 +313,11 @@ html[data-section="home-video-1"] {
 }
 
 .section.--home-video-1 {
-  max-width: 70em;
-
-  .__body {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-    .__video-button {
-      flex-shrink: 0;
-      flex-basis: 200px;
-      margin-top: 60px; // Align to top of "You"
-      margin-right: 40px;
-    }
-  }
+  max-width: 44em;
 }
 
 /******************************************************************************
-  River Gives You Control
+  Slides 7-8: River Gives You Control
 ******************************************************************************/
 
 html[data-section="home-river-gives-you-control"] {
@@ -497,11 +330,19 @@ html[data-section="home-river-gives-you-control"] {
 }
 
 .section.--home-river-gives-you-control {
-  max-width: 105em;
+  max-width: 54vw;
+
+  @include bp-mobile {
+    max-width: 80vw;
+  }
+
+  @include bp-small {
+    max-width: 80vw;
+  }
 }
 
 /******************************************************************************
-  Who Owns Your Data
+  Slide 9: Who Owns Your Data
 ******************************************************************************/
 
 html[data-section="home-who-owns-your-data"] {
@@ -514,11 +355,19 @@ html[data-section="home-who-owns-your-data"] {
 }
 
 .section.--home-who-owns-your-data {
-  max-width: 105em;
+  max-width: 54vw;
+
+  @include bp-mobile {
+    max-width: 90vw;
+  }
+
+  @include bp-small {
+    max-width: 90vw;
+  }
 }
 
 /******************************************************************************
-  Who Is Using Your Data
+  Slide 10: Who Is Using Your Data
 ******************************************************************************/
 
 html[data-section="home-who-is-using-your-data"] {
@@ -531,11 +380,19 @@ html[data-section="home-who-is-using-your-data"] {
 }
 
 .section.--home-who-is-using-your-data {
-  max-width: 105em;
+  max-width: 80vw;
+
+  @include bp-mobile {
+    max-width: 90vw;
+  }
+
+  @include bp-small {
+    max-width: 90vw;
+  }
 }
 
 /******************************************************************************
-  Who Is Using Your Data, 2
+  Slide 11: Who Is Using Your Data, 2
 ******************************************************************************/
 
 html[data-section="home-who-is-using-your-data-2"] {
@@ -548,38 +405,36 @@ html[data-section="home-who-is-using-your-data-2"] {
 }
 
 .section.--home-who-is-using-your-data-2 {
-  max-width: 105em;
+  max-width: 80vw;
+
+  @include bp-mobile {
+    max-width: 90vw;
+  }
+
+  @include bp-small {
+    max-width: 90vw;
+  }
 }
 
 /******************************************************************************
-  Data Untapped
+  Slide 12: Data Untapped
 ******************************************************************************/
 
 html[data-section="home-data-untapped"] {
 }
 
 .section.--home-data-untapped {
-  max-width: 70em;
+  max-width: 39em;
 
   .__body {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-
     .__video-button {
-      flex-shrink: 0;
-      flex-basis: 200px;
-      margin-top: 60px;
-      margin-right: 40px;
-
       background-image: url("../img/play-button-black.png");
     }
   }
 }
 
 /******************************************************************************
-  How Does River Work
+  Slide 14: How Does River Work
 ******************************************************************************/
 
 html[data-section="home-how-does-river-work"] {
@@ -592,11 +447,19 @@ html[data-section="home-how-does-river-work"] {
 }
 
 .section.--home-how-does-river-work {
-  max-width: 105em;
+  max-width: 80vw;
+
+  @include bp-mobile {
+    max-width: 90vw;
+  }
+
+  @include bp-small {
+    max-width: 90vw;
+  }
 }
 
 /******************************************************************************
-  Business of Data
+  Slide 15: Business of Data
 ******************************************************************************/
 
 html[data-section="home-business-of-data"] {
@@ -609,25 +472,15 @@ html[data-section="home-business-of-data"] {
 }
 
 .section.--home-business-of-data {
-  max-width: 70em;
+  max-width: 38em;
 
-  .__body {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-    .__video-button {
-      flex-shrink: 0;
-      flex-basis: 200px;
-      margin-top: 60px;
-      margin-right: 40px;
-    }
+  .__p1 {
+    max-width: 20em;
   }
 }
 
 /******************************************************************************
-  Resources
+  Slide 17: Resources
 ******************************************************************************/
 
 html[data-section="home-resources"] {
@@ -640,5 +493,5 @@ html[data-section="home-resources"] {
 }
 
 .section.--home-resources {
-  max-width: 105em;
+  max-width: 80vw;
 }
