--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,5 @@
 <header class="header">
-  <div class="__logo">
-    <img src="{{ site.baseurl }}/assets/img/river-logo.png" alt="Logo" />
-  </div>
+  <div class="__logo">{% include river_logo.svg %}</div>
   <div class="__links">
     <a href="javascript:void" title="Platform" class="__link l1">Platform</a>
     <a href="javascript:void" title="Products" class="__link l1">Products</a>
