--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -197,6 +197,7 @@ body {
   svg {
     color: var(--body-color);
     transition: color ease-in 0.3s;
+    width: 100%;
   }
 
   @include bp-mobile {
