--- a/_includes/video_player.html
+++ b/_includes/video_player.html
@@ -1,11 +1,8 @@
-<div
-  id="video-player-container"
-  class="video-player-container"
-  onclick="river.hideVideo(); return false;"
->
+<div id="video-player-container" class="video-player-container --hidden">
+  <div class="__overlay" onclick="river.hideVideo(); return false;"></div>
   <div
     id="video-player"
-    class="video-player"
+    class="__video-player"
     onclick="event.stopPropagation();"
   >
     <div id="ytplayer"></div>
