--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -220,23 +220,38 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
 
-  background: #00000077;
-
-  &.--hidden {
-    left: -100vw;
+  .__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: #00000077;
+    opacity: 1;
+    transition: opacity ease-in 0.1s;
   }
 
-  .video-player {
+  .__video-player {
+    position: fixed;
+    left: 5vw;
+    top: 10vh;
     width: 90vw;
-    height: 80vw;
+    height: 80vh;
     background: white;
+    transition: left ease-in 0.3s;
+    transition-delay: 0.1s;
+  }
+
+  &.--hidden {
+    .__overlay {
+      left: 100vw;
+      opacity: 0;
+    }
+
+    .__video-player {
+      left: 100vw;
+    }
   }
 }
 
@@ -292,9 +307,6 @@ body {
 *******************************************************************************/
 
 .section.--home-intro {
-  .__body {
-    // min-width: 64em;
-  }
 }
 
 /******************************************************************************
