Add video placeholder.

--- a/_includes/video_player.html
+++ b/_includes/video_player.html
@@ -5,6 +5,9 @@
     class="__video-player"
     onclick="event.stopPropagation();"
   >
-    <div id="ytplayer"></div>
+    <img
+      src="{{ site.baseurl }}/assets/img/video-placeholder.jpg"
+      alt="Play Video"
+    />
   </div>
 </div>
