--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -24,5 +24,7 @@
     />
   </video>
 
+  <div class="__line-drawing">{% include matt_sample_drawing.svg %}</div>
+
   <div class="__overlay"></div>
 </div>
