WIP, got first player up

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -1,14 +1,5 @@
 <div class="background-video-container">
-  <video
-    autoplay
-    playsinline
-    muted
-    loop
-    id="background-video-water"
-    class="__video --water"
-  >
-    <source src="{{ site.baseurl }}/assets/video/water.mp4" type="video/mp4" />
-  </video>
+  <div id="background-video-water-smooth" class="__video --water"></div>
 
   <video
     autoplay
