--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css" />
-    <script
-      src="https://www.youtube.com/player_api"
-      type="text/javascript"
-    ></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script
       type="text/javascript"
       src="{{ site.baseurl }}/assets/js/river.js"
