All videos playing

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -1,21 +1,5 @@
 <div class="background-video-container">
-  <div id="background-video-water-smooth" class="__video --water"></div>
-
-  <video
-    autoplay
-    playsinline
-    muted
-    loop
-    id="background-video-water-rough"
-    class="__video --water-rough"
-  >
-    <source
-      src="{{ site.baseurl }}/assets/video/water-rough.mp4"
-      type="video/mp4"
-    />
-  </video>
-
-  <div class="__line-drawing">{% include matt_sample_drawing.svg %}</div>
-
+  <div id="background-video-player" class="__video"></div>
+  <!-- <div class="__line-drawing">{% include matt_sample_drawing.svg %}</div> -->
   <div class="__overlay"></div>
 </div>
